# tbfg-lib

./: Cargo.toml  build.bat  build.cmd  build.sh
src/: char.rs  char_2.rs  lib.rs  methods.rs  obj.rs  point.rs  sim.rs  utils.rs  world.rs
